<?xml version="1.0" encoding="utf-8"?><!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/highlight"
    android:orientation="vertical"
    android:paddingTop="@dimen/default_padding">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:theme="@style/TitleTextView"
        tools:text="@tools:sample/lorem" />

    <TableLayout
        android:id="@+id/capabilities"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginHorizontal="@dimen/default_margin"
        android:shrinkColumns="0"
        android:theme="@style/AppTheme.TableRow">

        <TableRow android:background="#11000000">

            <TextView android:text="@string/download_bandwidth" />

            <TextView
                android:id="@+id/downloadBandwidth"
                android:text="@string/state_unknown" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/upload_bandwidth" />

            <TextView
                android:id="@+id/uploadBandwidth"
                android:text="@string/state_unknown" />
        </TableRow>

        <TableRow android:background="#11000000">

            <TextView android:text="@string/cellular_connection" />

            <TextView
                android:id="@+id/cellular"
                android:text="@string/state_unknown" />
        </TableRow>

        <TableRow>

            <TextView android:text="@string/internet_access" />

            <TextView
                android:id="@+id/hasInternet"
                android:text="@string/state_unknown" />
        </TableRow>

        <TableRow android:background="@color/table_row_odd">

            <TextView
                android:fontFamily="monospace"
                android:text="@string/cap_not_metered" />

            <TextView
                android:id="@+id/meteredness"
                android:text="@string/state_unknown" />
        </TableRow>

        <TableRow>

            <TextView
                android:fontFamily="monospace"
                android:text="@string/cap_temp_not_metered" />

            <TextView
                android:id="@+id/tempMeteredness"
                android:text="@string/state_unknown" />
        </TableRow>
    </TableLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/divider_height"
        android:layout_marginTop="@dimen/default_margin"
        android:background="?android:attr/listDivider" />
</LinearLayout>
