<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:columnCount="2"
    android:useDefaultMargins="true"
    android:alignmentMode="alignBounds">

    <TextView
        android:id="@+id/title"
        android:layout_columnSpan="2"
        style="@style/TextAppearance.Compat.Notification.Title"
        tools:text="@tools:sample/lorem" />

    <TextView
        style="@style/TextAppearance.Compat.Notification"
        android:text="@string/download_bandwidth" />
    <TextView
        android:id="@+id/downloadBandwidth"
        style="@style/TextAppearance.Compat.Notification"
        tools:text="@tools:sample/lorem" />

    <TextView
        style="@style/TextAppearance.Compat.Notification"
        android:text="@string/upload_bandwidth" />
    <TextView
        android:id="@+id/uploadBandwidth"
        style="@style/TextAppearance.Compat.Notification"
        tools:text="@tools:sample/lorem" />

    <TextView
        style="@style/TextAppearance.Compat.Notification"
        android:text="@string/cellular_connection" />
    <TextView
        android:id="@+id/cellular"
        style="@style/TextAppearance.Compat.Notification"
        tools:text="@tools:sample/lorem" />

    <TextView
        style="@style/TextAppearance.Compat.Notification"
        android:text="@string/internet_access" />
    <TextView
        android:id="@+id/hasInternet"
        style="@style/TextAppearance.Compat.Notification"
        tools:text="@tools:sample/lorem" />

    <TextView
        style="@style/TextAppearance.Compat.Notification"
        android:fontFamily="monospace"
        android:text="@string/cap_not_metered" />
    <TextView
        android:id="@+id/meteredness"
        style="@style/TextAppearance.Compat.Notification"
        tools:text="@tools:sample/lorem" />

    <TextView
        style="@style/TextAppearance.Compat.Notification"
        android:fontFamily="monospace"
        android:text="@string/cap_temp_not_metered" />
    <TextView
        android:id="@+id/tempMeteredness"
        style="@style/TextAppearance.Compat.Notification"
        tools:text="@tools:sample/lorem" />
</GridLayout>
