<?xml version="1.0" encoding="utf-8"?>
<!--
  ~ Copyright 2020 Google LLC
  ~
  ~ Licensed under the Apache License, Version 2.0 (the "License");
  ~ you may not use this file except in compliance with the License.
  ~ You may obtain a copy of the License at
  ~
  ~     https://www.apache.org/licenses/LICENSE-2.0
  ~
  ~ Unless required by applicable law or agreed to in writing, software
  ~ distributed under the License is distributed on an "AS IS" BASIS,
  ~ WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
  ~ See the License for the specific language governing permissions and
  ~ limitations under the License.
  -->

<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:id="@+id/globalInfo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/global"
            android:orientation="vertical"
            android:paddingTop="@dimen/default_padding">

            <TextView
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:text="@string/phone_state"
                android:theme="@style/TitleTextView" />

            <TableLayout
                android:id="@+id/networkInfo"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:shrinkColumns="0,1"
                android:theme="@style/AppTheme.TableRow">

                <TableRow android:background="#11000000">

                    <TextView android:text="@string/network_type" />

                    <TextView
                        android:id="@+id/networkType"
                        android:text="@string/state_unknown" />
                </TableRow>

                <TableRow>

                    <TextView android:text="@string/network_state" />

                    <TextView
                        android:id="@+id/networkState"
                        android:text="@string/state_unknown" />
                </TableRow>

                <TableRow android:background="#11000000">

                    <TextView android:text="@string/nr_state" />

                    <TextView
                        android:id="@+id/nrState"
                        android:text="@string/state_unknown" />
                </TableRow>

                <TableRow
                    android:id="@+id/overrideNetworkTypeRow"
                    android:visibility="gone">

                    <TextView android:text="@string/network_type_override" />

                    <TextView
                        android:id="@+id/overrideNetworkType"
                        android:text="@string/state_unknown" />
                </TableRow>
            </TableLayout>

            <TextView
                android:id="@+id/permissionsWarning"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="@dimen/default_margin"
                android:gravity="center_horizontal"
                android:paddingVertical="@dimen/default_padding"
                android:text="@string/permissions_warning"
                android:textColor="@android:color/primary_text_light"
                android:visibility="gone" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_marginTop="8dp"
                android:background="?android:attr/listDivider" />

        </LinearLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/networksRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:nestedScrollingEnabled="false"
            tools:listitem="@layout/item_network" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>
